# Health-Simplified-CLI-Application

./: .coverage  __init__.py  cli.py  config.py  database.py  models.py  requirements.txt
health_cli/: database.py  models.py  pyproject.toml
health_cli/controllers/: foodentry_con.py  goal_con.py  mealplan_con.py  report_con.py
health_cli/models/: foodentry.py  goal.py  mealplan.py  report_model.py  user.py
tests/: test_models.py
