[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "health-cli"
version = "0.1.0"
description = "CLI for tracking nutrition and meal planning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0"  # For pretty CLI output
]

[project.scripts]
health-cli = "health_cli.commands:app"