[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcli"
version = "1.0.0"
authors = [{name="Your Name"}]
description = "Nutrition tracking CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0"
]

[project.scripts]
health-cli = "health_cli.cli:app"